    changes from 455.23.04 to fix kernel module build for Linux 5.9.
  * Backport drm_legacy_pci_init/exit from src:linux 5.9.11-1 which are no
    longer available after NOUVEAU_LEGACY_CTX_SUPPORT (and thus DRM_LEGACY)
    got finally disabled.
  * Backport drm_prime_pages_to_sg_has_drm_device_arg changes
    from 455.45.01 to fix kernel module build for Linux 5.10.
  * Update lintian overrides.
  * Bump watch file version to 4.
  * Bump Standards-Version to 4.5.1. No changes needed.

  [ Vincent Cheng ]
  * Remove myself from Uploaders.

 -- Andreas Beckmann <anbe@debian.org>  Sat, 28 Dec 2019 12:12:32 +0100

nvidia-graphics-drivers (340.108-1~git4deb8jessie) UNRELEASED; urgency=medium

  * Convert packaging repository from SVN to GIT.
  * Add debian/rules targets for archiving the tarballs in a separate
    repository using sparse checkouts and git-lfs as storage backend
    (390.87-3).
  * Create and commit tarball symlinks for legacy branches (430.64-1).

 -- Andreas Beckmann <anbe@debian.org>  Sat, 28 Dec 2019 12:12:32 +0100

nvidia-graphics-drivers (340.108-1) UNRELEASED; urgency=medium

  * The 340.xx legacy driver series has been declared as End-of-Life by
    NVIDIA. No further updates fixing security issues, critical bugs, or
    adding support for new Xorg or Linux releases will be issued.
    https://nvidia.custhelp.com/app/answers/detail/a_id/3142

  * New upstream legacy 340xx branch release 340.108 (2019-12-23).
    - Updated the nvidia-drm kernel module for compatibility with the removal
      of the DRIVER_PRIME flag in recent Linux kernel versions.
    - Updated nvidia-bug-report.sh to search the systemd journal for
      gdm-x-session logs.
    - Fixed a build failure, "too many arguments to function 'get_user_pages'",
      when building the NVIDIA kernel module for Linux kernel v4.4.168.
    - Fixed a build failure, "implicit declaration of function do_gettimeofday",
      when building the NVIDIA kernel module for Linux kernel 5.0 release