@@ -5,3 +5,5 @@ interest-await /usr/lib/#PRIVATE#
 interest-await /usr/lib/i386-linux-gnu/#PRIVATE#
 interest-await /usr/lib/x86_64-linux-gnu/#PRIVATE#
 interest-await /usr/lib/arm-linux-gnueabihf/#PRIVATE#
+
+interest-await /usr/include/nvml.h
